# account_book

./: Dockerfile  exceptions.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
account_book/: models.py  repositories.py  serializers.py  settings.py  urls.py
book/: models.py  repositories.py  schema.py  serializers.py  services.py  urls.py  views.py
book/migrations/: 0001_initial.py
configs/: config.py  config_example.yml
decorators/: auth_decorators.py
providers/: auth_provider.py
tests/book/: service_test.py
tests/user/: service_test.py
user/: models.py  repositories.py  schema.py  serializers.py  services.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_token_user.py
